# tensorboard-proto

./: Cargo.toml
src/: api.rs  attr_value.proto  attr_value.rs  event.proto  event.rs  graph.proto  graph.rs  layout.rs  node_def.proto  node_def.rs  plugin_hparams.proto  plugin_hparams.rs  plugin_mesh.rs  plugin_pr_curve.rs  plugin_text.rs  resource_handle.rs  step_stats.rs  summary.proto  summary.rs  tensor.proto  tensor.rs  tensor_shape.rs  types.rs  update.sh  versions.rs
