[package]
name = "tensorboard-proto"
version = "0.5.7"
authors = ["yguan <yguan@example.com>"]
edition = "2021"
description = """
protobuf in tensorboard
"""
documentation = "https://docs.rs/tensorboard-rs"
homepage = "https://github.com/pipehappy1/auto-diff"
repository = "https://github.com/pipehappy1/auto-diff"
readme = "README.md"
license = "MIT"
exclude = ["/dev/**"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"

[dev-dependencies]
protobuf-codegen = "2"